Website Redesign: Implement new UI components and layout

--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
     "start": "http-server -p 8000"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
+    "http-server": "^14.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
