--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "radhanagzirkar.github.io",
   "version": "1.0.0",
-  "description": "Personal static site",
+  "private": true,
+  "type": "module",
+  "description": "Personal site powered by Vite + React + Tailwind",
   "scripts": {
-    "start": "http-server -p 8000"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.8"
   }
 }
